<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.szfp.szfp.view.activity.ReverseActivity">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_med"
        android:layout_marginTop="@dimen/space_25"
        android:background="@drawable/shadow"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/space_15"
        android:text="@string/resverse_fare" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/space_20"
        android:padding="@dimen/space_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_3"
            android:minEms="10"
            android:text="@string/search_commuter1"/>

        <EditText
            android:id="@+id/ed_reverse_commuter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:background="@drawable/text_divbox"
            android:padding="@dimen/space_15" />

    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="@dimen/space_20"
        android:padding="@dimen/space_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:minEms="10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/space_3"
            android:text="@string/amount"/>

        <EditText
            android:id="@+id/ed_reverse_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:inputType="numberDecimal"
            android:background="@drawable/text_divbox"
            android:padding="@dimen/space_15" />

        <com.szfp.szfplib.weight.StateButton
            android:padding="@dimen/space_5"
            android:id="@+id/bt_reverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            app:normalBackgroundColor="@color/login_normal"
            app:normalTextColor="@color/white"
            app:pressedBackgroundColor="@color/login_pass"
            app:pressedTextColor="@color/white" />
    </LinearLayout>

    <CheckBox
        android:layout_marginTop="@dimen/space_20"
        android:textSize="@dimen/text_size_24"
        android:layout_marginLeft="@dimen/space_50"
        android:id="@+id/ck_reverse_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/give_receipt"/>


    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_10">

        <com.szfp.szfplib.weight.StateButton
            android:padding="@dimen/space_5"
            android:id="@+id/bt_reverse_sava"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reverse"
            app:normalBackgroundColor="@color/login_normal"
            app:normalTextColor="@color/white"
            app:pressedBackgroundColor="@color/login_pass"
            app:pressedTextColor="@color/white" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/space_10"></View>

        <com.szfp.szfplib.weight.StateButton
            android:id="@+id/bt_reverse_cancel"
            android:padding="@dimen/space_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:normalBackgroundColor="@color/login_normal"
            app:normalTextColor="@color/white"
            app:pressedBackgroundColor="@color/login_pass"
            app:pressedTextColor="@color/white" />
    </LinearLayout>

</LinearLayout>
