<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.szfp.szfp.view.activity.DynamicActivity">
    <TextView
        android:layout_marginBottom="@dimen/space_40"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/accent"
        android:textSize="@dimen/text_med"
        android:layout_marginTop="@dimen/space_25"
        android:background="@drawable/shadow"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/space_15"
        android:text="@string/dynamic_fare" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/space_10"
        android:orientation="vertical">

        <TextView
            android:padding="@dimen/space_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/minimum"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/ed_minimum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/text_divbox"
            android:inputType="numberDecimal"
            android:padding="@dimen/space_5" />
        <TextView
            android:padding="@dimen/space_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/maximum"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/ed_maximum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/text_divbox"
            android:inputType="numberDecimal"
            android:padding="@dimen/space_5" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/space_10">

        <com.szfp.szfplib.weight.StateButton
            android:padding="@dimen/space_5"
            android:id="@+id/bt_dynamic_sava"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:normalBackgroundColor="@color/login_normal"
            app:normalTextColor="@color/white"
            app:pressedBackgroundColor="@color/login_pass"
            app:pressedTextColor="@color/white" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <com.szfp.szfplib.weight.StateButton
            android:id="@+id/bt_dynamic_cancel"
            android:padding="@dimen/space_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:normalBackgroundColor="@color/login_normal"
            app:normalTextColor="@color/white"
            app:pressedBackgroundColor="@color/login_pass"
            app:pressedTextColor="@color/white" />
    </LinearLayout>

</LinearLayout>
