<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.szfp.szfp.view.activity.StudentManagementActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/accent"
                android:textSize="@dimen/text_med"
                android:layout_marginTop="@dimen/space_25"
                android:background="@drawable/shadow"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/space_15"
                android:text="@string/transport_menu" />

            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:padding="@dimen/space_30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.szfp.szfplib.weight.StateButton
                        android:id="@+id/bt_student_gate_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_5"
                        android:text="@string/student_gatas_pass"
                        android:textSize="@dimen/space_12"
                        app:normalBackgroundColor="@color/lime"
                        app:normalTextColor="@color/black"
                        app:pressedBackgroundColor="@color/limegreen"
                        app:radius="@dimen/space_2" />


                    <com.szfp.szfplib.weight.StateButton
                        android:id="@+id/bt_student_class_attendance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_5"
                        android:text="@string/class_attendance"
                        android:textSize="@dimen/space_12"
                        app:normalBackgroundColor="@color/lime"
                        app:normalTextColor="@color/black"
                        app:pressedBackgroundColor="@color/limegreen"
                        app:radius="@dimen/space_2" />



                    <com.szfp.szfplib.weight.StateButton
                        android:id="@+id/bt_student_upload_student"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_5"
                        android:text="@string/upload_student"
                        android:textSize="@dimen/space_12"
                        app:normalBackgroundColor="@color/lime"
                        app:normalTextColor="@color/black"
                        app:pressedBackgroundColor="@color/limegreen"
                        app:radius="@dimen/space_2" />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/space_30"
                    android:layout_weight="1">
                    <com.szfp.szfplib.weight.StateButton
                        android:id="@+id/bt_student_attendance_report"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_5"
                        android:text="@string/attendance_report"
                        android:textSize="@dimen/space_12"
                        app:normalBackgroundColor="@color/lime"
                        app:normalTextColor="@color/black"
                        app:pressedBackgroundColor="@color/limegreen"
                        app:radius="@dimen/space_2" />


                    <com.szfp.szfplib.weight.StateButton
                        android:id="@+id/bt_student_register_student_staff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_5"
                        android:text="@string/register_student_staff"
                        android:textSize="@dimen/space_12"
                        app:normalBackgroundColor="@color/lime"
                        app:normalTextColor="@color/black"
                        app:pressedBackgroundColor="@color/limegreen"
                        app:radius="@dimen/space_2" />
                    <com.szfp.szfplib.weight.StateButton
                        android:id="@+id/bt_student_fee_statement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_5"
                        android:text="@string/fee_statement"
                        android:textSize="@dimen/space_12"
                        app:normalBackgroundColor="@color/lime"
                        app:normalTextColor="@color/black"
                        app:pressedBackgroundColor="@color/limegreen"
                        app:radius="@dimen/space_2" />
                    <com.szfp.szfplib.weight.StateButton
                        android:id="@+id/bt_student_extra_curriculums"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/space_5"
                        android:text="@string/extra_curriculums"
                        android:textSize="@dimen/space_12"
                        app:normalBackgroundColor="@color/lime"
                        app:normalTextColor="@color/black"
                        app:pressedBackgroundColor="@color/limegreen"
                        app:radius="@dimen/space_2" />


                </LinearLayout>




            </LinearLayout>





        </LinearLayout>
    </ScrollView>




</LinearLayout>
